Add git branch and git checkout features